# acorns-cli

./: Cargo.toml  README.md  deny.toml
.github/workflows/: ci.yml
data/: catalog.json
src/: account.rs  auth.rs  catalog.rs  cmd.rs  exec.rs  funding.rs  invest.rs  main.rs  net.rs  output.rs  raw.rs  safety.rs  session.rs  tax.rs  transfer.rs
