[package]
name = "acorns-cli"
version = "0.1.0"
edition = "2021"
description = "Unofficial CLI for managing an Acorns account via its GraphQL API"

[[bin]]
name = "acorns"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
uuid = { version = "1", features = ["v4"] }
rpassword = "7"
base64 = "0.22"
